--- a/src/main/resources/synthea.properties
+++ b/src/main/resources/synthea.properties
@@ -3,17 +3,17 @@
 exporter.baseDirectory = ./output/
 exporter.use_uuid_filenames = false
 exporter.subfolders_by_id_substring = false
-exporter.years_of_history = 10
+exporter.years_of_history = 0
 # number of years of history to keep in exported records, anything older than this may be filtered out
 # set years_of_history = 0 to skip filtering altogether and keep the entire history
-exporter.ccda.export = false
+exporter.ccda.export = true
 exporter.fhir.export = true
 exporter.fhir.use_shr_extensions = true
-exporter.fhir_dstu2.export = false
+exporter.fhir_dstu2.export = true
 exporter.hospital.fhir.export = true
-exporter.hospital.fhir_dstu2.export = false
-exporter.csv.export = false
-exporter.text.export = false
+exporter.hospital.fhir_dstu2.export = true
+exporter.csv.export = true
+exporter.text.export = true
 exporter.cost_access_outcomes_report = true
 exporter.prevalence_report = true
 # note: prevalence report requires a database (set below)
@@ -22,7 +22,7 @@ exporter.prevalence_report = true
 # this can be overridden by passing a different value to the Generator constructor
 generate.default_population = 1
 
-generate.log_patients.detail = simple
+generate.log_patients.detail = detailed
 # options are "none", "simple", or "detailed" (without quotes). defaults to simple if another value is used
 # none = print nothing to the console during generation
 # simple = print patient names once they are generated.
@@ -48,7 +48,7 @@ generate.only_dead_patients = false
 
 # if true, tracks and prints out details of transition tables for each module upon completion
 # note that this may significantly slow down processing, and is intended primarily for debugging
-generate.track_detailed_transition_metrics = false
+generate.track_detailed_transition_metrics = true
 
 # If true, person names have numbers appended to them to make them more obviously fake
 generate.append_numbers_to_person_names = true
